--- a/content/post/R/2021-10-13-foundations-of-inference/index.en.Rmd
+++ b/content/post/R/2021-10-13-foundations-of-inference/index.en.Rmd
@@ -465,15 +465,15 @@ disc_perm %>%
   get_p_value(obs_stat = diff_orig, direction = "greater")
 
 # Visualize and calculate the p-value for the small dataset
-disc_perm_small %>%
-  visualize(obs_stat = diff_orig_small, direction = "greater")
+#disc_perm_small %>%
+#  visualize(obs_stat = diff_orig_small, direction = "greater")
 
 disc_perm_small %>%
   get_p_value(obs_stat = diff_orig_small, direction = "greater")
 
 # Visualize and calculate the p-value for the big dataset
-disc_perm_big %>%
-  visualize(obs_stat = diff_orig_big, direction = "greater")
+#disc_perm_big %>%
+#  visualize(obs_stat = diff_orig_big, direction = "greater")
 
 disc_perm_big %>%
   get_p_value(obs_stat = diff_orig_big, direction = "greater")
