--- a/content/post/R/2021-10-13-foundations-of-inference/index.en.Rmd
+++ b/content/post/R/2021-10-13-foundations-of-inference/index.en.Rmd
@@ -555,7 +555,7 @@ disc_perm %>%
 
 You will continue learning about hypothesis testing with a new example and the same structure of randomization tests. In this chapter, however, the focus will be on different errors (type I and type II), how they are made, when one is worse than another, and how things like sample size and effect size impact the error rates.
 
-## 3-2- Summarizing opportunity cost (1)
+## 3-2 Summarizing opportunity cost (1)
 
 As you saw in the video, we're interested in whether the treatment and control groups were equally likely to buy a DVD after reading the experimental statements.
 
@@ -574,7 +574,7 @@ opportunity %>%
   summarize(buy_prop = mean(decision=="buyDVD"))
 ```
 
-## 3-3- Plotting opportunity cost
+## 3-3 Plotting opportunity cost
 
 Again, interest is in whether the treatment and control groups were equally likely to buy a DVD after reading the experimental statements. Here, you'll create a barplot to visualize the difference in proportions between the treatment and control groups.
 
@@ -585,7 +585,7 @@ ggplot(opportunity, aes(x = group, fill = decision)) +
   geom_bar(position="fill")
 ```
 
-## 3-4- Randomizing opportunity cost
+## 3-4 Randomizing opportunity cost
 
 As in Chapter 2 Exercise 5, you will permute the data to generate a distribution of differences as if the null hypothesis were true.
 
@@ -642,7 +642,7 @@ ggplot(opp_perm, aes(x = stat)) +
   geom_vline(aes(xintercept = diff_obs), color = "red")
 ```
 
-## 3-5- Summarizing opportunity cost (2)
+## 3-5 Summarizing opportunity cost (2)
 
 Now that you've created the randomization distribution, you'll use it to assess whether the observed difference in proportions is consistent with the null difference. You will measure this consistency (or lack thereof) with a p-value, or the proportion of permuted differences less than or equal to the observed difference.
 
@@ -693,7 +693,7 @@ A: Type I: There is not a difference in proportions, but the observed difference
 
 Type II: There is a difference in proportions, but the observed difference is not large enough to indicate that the proportions are different.
 
-## 3-10- p-value for two-sided hypotheses: opportunity costs
+## 3-10 p-value for two-sided hypotheses: opportunity costs
 
 The p-value measures the likelihood of data as or more extreme than the observed data, given the null hypothesis is true. Therefore, the appropriate p-value for a two-sided alternative hypothesis is a two-sided p-value.
 
@@ -713,8 +713,155 @@ opp_perm %>%
 
 As a complement to hypothesis testing, confidence intervals allow you to estimate a population parameter. Recall that your interest is always in some characteristic of the population, but you only have incomplete information to estimate the parameter using sample data. Here, the parameter is the true proportion of successes in a population. Bootstrapping is used to estimate the variability needed to form the confidence interval.
 
-## 4-2- 
+Q: What is the parameter?
+
+In November 2016, the voters elected a new president of the United States. Prior to the election, thousands of polls were taken to gauge the popularity of each of the candidates. Leaving aside the idea that popular opinion changes over time, a poll can be thought of as a sample of individuals measured so as to estimate the proportion of all voters who will vote for each candiate (i.e. the population parameter).
+
+Consider an election in your home town that will take place in a week's time. You poll a randomly selected subset of the voters in your town and ask them if they plan to vote for Candidate X or Candidate Y. In this chapter, we will focus on sampling variability—the variability in sample proportions due to polling different randomly selected individuals from the population.
+
+Before investigating the sampling variability, what is the population parameter of interest?
+
+A: The proportion of all voters in your town who will vote for Candidate X on election day.
+
+Q:Hypothesis test or confidence interval?
+
+A university is trying to determine whether parking is a problem on its campus. The student newspaper contacts a random sample of 200 students and asks whether or not they are frustrated with the parking situation. They want to estimate the proportion of students at the college who are frustrated with the parking situation.
+
+In this setting, which is more appropriate, a hypothesis test or a confidence interval?
+
+A:Confidence interval because the goal is to estimate a population parameter.
+
+## 4-5 Resampling from a sample
+
+To investigate how much the estimates of a population proportion change from sample to sample, you will set up two sampling experiments.
+
+In the first experiment, you will simulate repeated samples from a population. In the second, you will choose a single sample from the first experiment and repeatedly resample from that sample: a method called bootstrapping. More specifically:
+
+Experiment 1: Assume the true proportion of people who will vote for Candidate X is 0.6. Repeatedly sample 30 people from the population and measure the variability of 
+ (the sample proportion).
+
+Experiment 2: Take one sample of size 30 from the same population. Repeatedly sample 30 people (with replacement!) from the original sample and measure the variability of 
+ (the resample proportion).
+
+It's important to realize that the first experiment relies on knowing the population and is typically impossible in practice. The second relies only on the sample of data and is therefore easy to implement for any statistic. Fortunately, as you will see, the variability in 
+, or the proportion of "successes" in a sample, is approximately the same whether we sample from the population or resample from a sample.
+
+We have created 1000 random samples, each of size 30, from the population. The resulting data frame, all_polls, is available in your workspace. Take a look before getting started.
 
 ```{r}
 
 ```
+
+
+## 4-6 Visualizing the variability of p-hat
+
+In order to compare the variability of the sampled 
+ and 
+ values in the previous exercises, it is valuable to visualize their distributions. To recall, the exercises walked through two different experiments for investigating the variability of P and P*:
+
+Experiment 1: Sample () repeatedly from an extremely large population (gold standard, but unrealistic)
+
+Experiment 2: Resample () repeatedly with replacement from a single sample of size 30
+
+```{r}
+
+```
+
+
+## 4-9 Empirical Rule
+
+Many statistics we use in data analysis (including both the sample average and sample proportion) have nice properties that are used to better understand the population parameter(s) of interest.
+
+One such property is that if the variability of the sample proportion (called the standard error, or ) is known, then approximately 95% of 
+ values (from different samples) will be within  of the true population proportion.
+
+To check whether that holds in the situation at hand, let's go back to the polls generated by taking many samples from the same population.
+
+The all_polls dataset contains 1000 samples of size 30 from a population with a probability of voting for Candidate X equal to 0.6.
+
+Note that you will use the R function sd() which calculates the variability of any set of numbers. In statistics, when sd() is applied to a variable (e.g., price of house) we call it the standard deviation. When sd() is applied to a statistic (e.g., set of sample proportions) we call it the standard error.
+
+```{r}
+
+```
+
+
+## 4-10 Bootstrap t-confidence interval
+
+The previous exercises told you two things:
+
+You can measure the variability associated with 
+ by resampling from the original sample.
+Once you know the variability of 
+, you can use it as a way to measure how far away the true proportion is.
+Note that the rate of closeness (here 95%) refers to how often a sample is chosen so that it is close to the population parameter. You won't ever know if a particular dataset is close to the parameter or far from it, but you do know that over your lifetime, 95% of the samples you collect should give you estimates that are within  of the true population parameter.
+
+The votes from a single poll, one_poll, and the data from 1000 bootstrap resamples, one_poll_boot are available in your workspace. These are based on Experiment 2 from earlier in the chapter.
+
+As in the previous exercise, when discussing the variability of a statistic, the number is referred to as the standard error.
+
+```{r}
+
+```
+
+
+## 4-11 Bootstrap percentile interval
+
+The main idea in the previous exercise was that the distance between the original sample 
+ and the resampled (or bootstrapped) 
+ values gives a measure for how far the original 
+ is from the true population proportion.
+
+The same variability can be measured through a different mechanism. As before, if 
+ is sufficiently close to the true parameter, then the resampled (bootstrapped) 
+ values will vary in such a way that they overlap with the true parameter.
+
+Instead of using  as a way to measure the middle 95% of the sampled 
+ values, you can find the middle of the resampled 
+ values by removing the upper and lower 2.5%. Note that this second method of constructing bootstrap intervals also gives an intuitive way for making 90% or 99% confidence intervals as well as 95% intervals.
+
+The bootstrapped resamples, one_poll_boot, and the proportion of yes votes, p_hat are available in your workspace.
+
+```{r}
+
+```
+
+
+## 4-13 Sample size effects on bootstrap CIs
+
+In a previous multiple choice exercise, you realized that if you resampled the data with the wrong size (e.g. 300 or 3 instead of 30), the standard error (SE) of the sample proportions was off. With 300 resampled observations, the SE was too small. With 3 resampled observations, the SE was too large.
+
+Here, you will use the incorrect standard error (based on the incorrect sample size) to create a confidence interval. The idea is that when the standard error is off, the interval is not particularly useful, nor is it correct.
+
+```{r}
+
+```
+
+
+## 4-14 Sample proportion value effects on bootstrap CIs
+
+One additional element that changes the width of the confidence interval is the sample parameter value, 
+.
+
+Generally, when the true parameter is close to 0.5, the standard error of 
+ is larger than when the true parameter is closer to 0 or 1. When calculating a bootstrap t-confidence interval, the standard error controls the width of the CI, and here (given a true parameter of 0.8) the sample proportion is higher than in previous exercises, so the width of the confidence interval will be narrower.
+
+```{r}
+
+```
+
+
+## 4-15 Percentile effects on bootstrap CIs
+
+Most scientists use 95% intervals to quantify their uncertainty about an estimate. That is, they understand that over a lifetime of creating confidence intervals, only 95% of them will actually contain the parameter that they set out to estimate.
+
+There are studies, however, which warrant either stricter or more lenient confidence intervals (and subsequent error rates).
+
+The previous bootstrapped 
+ values have been loaded for you and are available in one_poll_boot.
+
+```{r}
+
+```
+
+
