--- a/content/post/R/2021-10-13-foundations-of-inference/index.en.Rmd
+++ b/content/post/R/2021-10-13-foundations-of-inference/index.en.Rmd
@@ -995,7 +995,22 @@ The previous bootstrapped
  values have been loaded for you and are available in one_poll_boot.
 
 ```{r}
+# Calculate a 95% bootstrap percentile interval
+one_poll_boot %>% 
+  get_confidence_interval(level= 0.95) 
 
+# Calculate a 99% bootstrap percentile interval
+one_poll_boot %>% 
+  get_confidence_interval(level= 0.99) 
+
+# Calculate a 90% bootstrap percentile interval
+one_poll_boot %>% 
+  get_confidence_interval(level= 0.9) 
+
+# Plot ci_endpoints vs. ci_percent to compare the intervals
+ggplot(conf_int_data, aes(ci_percent, ci_endpoints)) +
+  # Add a line layer
+  geom_line()
 ```
 
 
